--- a/index.html
+++ b/index.html
@@ -9,9 +9,94 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class="line"></div>
     <div class="container">
+        <!-- NavBar #########################################################-->
+            <nav class="navbar navbar-expand-lg menu-container">
+                <div class="ironAo-icon">
+                    <a href="#" class="navbar-brand">
+                        <img class="d-inline-block align-top img-fluid sword" src="img/titulo.png" width="320px">
+                        <h1 class="d-inline-block h1">Iron<strong>Ao</strong></h1>
+                    </a>
+                </div>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ironAo-menu" aria-controls="ironAo-menu" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse d-flex align-items-start" id="ironAo-menu">
+                    <ul class="navbar-nav menu-list">
+                        <li class="nav-item menu-buttons"><a class="nav-link" href="index.html">Inicio</a></li>     
+                        <li class="nav-item menu-buttons"><a class="nav-link" href="#">Novedades</a></li>
+                        <li class="nav-item menu-buttons"><a class="nav-link" href="#">Reviews</a></li>
+                        <li class="nav-item menu-buttons"><a class="nav-link" href="#">Acerca de</a></li>
+                    </ul>           
+                </div>
+            </nav>
 
+        <!-- Slider ############################################################3-->
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="img/Mass-Effect-Trilogy.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/Slider-Andromeda.jpg" alt="Third slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <!-- Another Slider ############################################-->
+        <div class="another-slider">
+            <div>
+                <ul>
+                    <li class="imagenes-slider">
+                        <a href=""></a>
+                    </li>
+                    <li class="imagenes-slider">
+                        <a href=""></a>
+                    </li>
+                    <li class="imagenes-slider">
+                        <a href=""></a>
+                    </li>
+                    <li class="imagenes-slider">
+                        <a href=""></a>
+                    </li>
+                    <li class="imagenes-slider">
+                        <a href=""></a>
+                    </li>            
+                </ul>
+            </div>
+        </div>
+        <!-- Cards #########################################################-->
+        <div class="row no-gutters">
+            <div class="col-8 cards-styles" style="background: #000000">
+                 fafsafas
+            </div>
+            <div class="col-4 cards-styles" style="background: #000000">
+            fasfafs
+            </div>
+        </div>
+        <!-- Video Trailer ################################################-->
+        <div class="video-trailer">
+            <div>
+
+            </div>
+        </div>
+        <!-- Footer ########################################################-->
+        <div class="footer">
+
+        </div>
     </div>
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
