--- a/index.html
+++ b/index.html
@@ -33,24 +33,36 @@
             </nav>
 
         <!-- Slider ############################################################3-->
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleControls" class="carousel slide slider" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/Mass-Effect-Trilogy.jpg" alt="First slide">
+                    <img class="d-block w-100 slider-img" src="img/Mass-Effect-Trilogy.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block slider-description">
+                        <h4>Titulo</h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam officiis eum molestias, pariatur non eius?</p>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt="Second slide">
+                    <img class="d-block w-100 slider-img" src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block slider-description">
+                            <h4>Titulo</h4>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam officiis eum molestias, pariatur non eius?</p>
+                        </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/Slider-Andromeda.jpg" alt="Third slide">
+                    <img class="d-block w-100 slider-img" src="img/Slider-Andromeda.jpg" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block slider-description">
+                            <h4>Titulo</h4>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam officiis eum molestias, pariatur non eius?</p>
+                        </div>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="carousel-control-prev-icon slider-arrows" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
             <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="carousel-control-next-icon slider-arrows" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
         </div>
