empezando con el multislider

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="line"></div>
     <div class="container">
         <!-- NavBar #########################################################-->
-            <nav class="navbar navbar-expand-lg menu-container">
+            <nav class="navbar navbar-expand-lg menu-container w-100">
                 <div class="ironAo-icon">
                     <a href="#" class="navbar-brand">
-                        <img class="d-inline-block align-top img-fluid sword" src="img/titulo.png" width="320px">
+                        <img class="d-inline-block align-top img-fluid sword" src="img/titulo.png">
                         <h1 class="d-inline-block h1">Iron<strong>Ao</strong></h1>
                     </a>
                 </div>
@@ -32,6 +32,9 @@
                 </div>
             </nav>
 
+       <!-- <div class="d-flex justify-content-center">
+                <img class="divider" src="img/accent-2.png">
+        </div>-->
         <!-- Slider ############################################################3-->
         <div id="carouselExampleControls" class="carousel slide slider" data-ride="carousel">
             <div class="carousel-inner">
@@ -68,24 +71,29 @@
         </div>
         <!-- Another Slider ############################################-->
         <div class="another-slider">
-            <div>
-                <ul>
-                    <li class="imagenes-slider">
-                        <a href=""></a>
-                    </li>
-                    <li class="imagenes-slider">
-                        <a href=""></a>
-                    </li>
-                    <li class="imagenes-slider">
-                        <a href=""></a>
-                    </li>
-                    <li class="imagenes-slider">
-                        <a href=""></a>
-                    </li>
-                    <li class="imagenes-slider">
-                        <a href=""></a>
-                    </li>            
-                </ul>
+            <div class="slider-div">
+                <div class="slider-ul">
+                    <div class="d-inline">
+                        <a href="#">
+                        <img class="imagenes-slider"  width="230px" src="img/Mass-Effect-Trilogy.jpg" alt=""></a>
+                    </div>
+                    <div class=" d-inline">
+                        <a href="#">
+                        <img class="imagenes-slider" width="230px"  src="img/Mass-Effect-Trilogy.jpg" alt=""></a>
+                    </div>
+                    <div class="d-inline">
+                        <a href="#">
+                        <img class="imagenes-slider" width="230px" src="img/Mass-Effect-Trilogy.jpg" alt=""></a>
+                    </div>
+                    <div class=" d-inline">
+                        <a href="#">
+                        <img class="imagenes-slider" width="230px"  src="img/Mass-Effect-Trilogy.jpg" alt=""></a>
+                    </div>
+                    <div class="d-inline">
+                        <a href="#">
+                        <img class="imagenes-slider" width="230px"  src="img/Mass-Effect-Trilogy.jpg" alt=""></a>
+                    </div>            
+                </div>
             </div>
         </div>
         <!-- Cards #########################################################-->
