--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <div class="line"></div>
     <div class="container">
         <!-- NavBar #########################################################-->
-            <nav class="navbar navbar-expand-lg menu-container w-100">
-                <div class="ironAo-icon">
-                    <a href="#" class="navbar-brand">
+        <div class="w-100">  
+            <nav class="row justify-content-center navbar navbar-expand-lg menu-container w-100">
+                <div class="col-4 ironAo-icon">
+                    <a href="#" class="navbar-brand justify-content-center d-flex">
                         <img class="d-inline-block align-top img-fluid sword" src="img/titulo.png">
                         <h1 class="d-inline-block h1">Iron<strong>Ao</strong></h1>
                     </a>
@@ -22,15 +23,16 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ironAo-menu" aria-controls="ironAo-menu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse d-flex align-items-start" id="ironAo-menu">
-                    <ul class="navbar-nav menu-list">
-                        <li class="nav-item menu-buttons"><a class="nav-link" href="index.html">Inicio</a></li>     
-                        <li class="nav-item menu-buttons"><a class="nav-link" href="#">Novedades</a></li>
-                        <li class="nav-item menu-buttons"><a class="nav-link" href="#">Reviews</a></li>
-                        <li class="nav-item menu-buttons"><a class="nav-link" href="#">Acerca de</a></li>
+                <div class="col-6 row collapse navbar-collapse d-flex align-items-start" id="ironAo-menu">
+                    <ul class="col-12 no-gutters row navbar-nav menu-list">
+                        <li class="col-3 col-lg-3 nav-item menu-buttons"><a class="nav-link" href="index.html">Inicio</a></li>     
+                        <li class="col-3 col-lg-3 nav-item menu-buttons"><a class="nav-link" href="#">Novedades</a></li>
+                        <li class="col-3 col-lg-3 nav-item menu-buttons"><a class="nav-link" href="#">Reviews</a></li>
+                        <li class="col-3 nav-item col-lg-3 menu-buttons"><a class="nav-link" href="#">Acerca de</a></li>
                     </ul>           
                 </div>
             </nav>
+        </div> 
 
        <!-- <div class="d-flex justify-content-center">
                 <img class="divider" src="img/accent-2.png">
