cards casi terminadas

--- a/index.html
+++ b/index.html
@@ -113,9 +113,74 @@
                 </div>
             </div>
             <div class="cards-2">
-                <img src="img/marco3.png" alt="marco3">
+                <div>
+                    <h4>Mejores Clanes</h4>
+                    <img src="img/marco3.png" alt="marco3">
+                </div>
+                <div class="row card-table">
+                    <div class="col-8">
+                        <ul>
+                            <li><a href="#"></a>Pt Amo</li>
+                            <li><a href="#"></a>Desterrados</li>
+                            <li><a href="#"></a>Undead</li>
+                            <li><a href="#"></a>Newbie Rlz</li>
+                            <li><a href="#"></a>Free Style</li>
+                            <li><a href="#"></a>Akatsuki</li>
+                        </ul>
+                    </div>
+                    <div class="col-4">
+                        <ul>
+                            <li>123</li>
+                            <li>1231</li>
+                            <li>123</li>
+                            <li>232</li>
+                            <li>444</li>
+                            <li>5511</li>
+
+                        </ul>
+                    </div>
+                </div>
+                <!--<div class="card-table">
+                   <table>
+                       <tbody>
+                           <tr>
+                               <td><a href="#">Clan1</a></td>
+                               <td>1441</td>
+                            </tr>
+                           <tr>
+                               <td>
+                                   <a href="#">Clan2</a>
+                                </td>
+                                <td>1441</td>
+                            </tr>
+                           <tr>
+                               <td>
+                                   <a href="#">Clan3</a>
+                                </td>
+                                <td>1441</td>
+                            </tr>
+                           <tr>
+                               <td>
+                                   <a href="#">Clan4</a>
+                                </td>
+                                <td>1441</td></tr>
+                           <tr>
+                               <td>
+                                   <a href="#">Clan5</a>
+                                </td>
+                                <td>1441</td>
+                            </tr>
+                           <tr>
+                               <td>
+                                   <a href="#">Clan6</a>
+                                </td>
+                                <td>1441</td>
+                            </tr>
+                        </tbody>
+                   </table>
+                </div>
             </div>
-        </div>
+        </div>-->
         <!-- Video Trailer ################################################-->
         <div class="video-trailer">
             <div>
