--- a/index.html
+++ b/index.html
@@ -75,23 +75,23 @@
         <div class="another-slider">
             <div class="slider-div">
                 <div class="slider-ul">
-                    <div class="d-inline">
+                    <div class="d-inline-block">
                         <a href="#">
                         <img class="imagenes-slider"  width="225px" src="img/Mass-Effect-Trilogy.jpg" alt=""></a>
                     </div>
-                    <div class=" d-inline">
+                    <div class=" d-inline-block">
                         <a href="#">
                         <img class="imagenes-slider" width="225px"  src="img/Mass-Effect-Trilogy.jpg" alt=""></a>
                     </div>
-                    <div class="d-inline">
+                    <div class="d-inline-block">
                         <a href="#">
                         <img class="imagenes-slider" width="225px" src="img/Mass-Effect-Trilogy.jpg" alt=""></a>
                     </div>
-                    <div class=" d-inline">
+                    <div class=" d-inline-block">
                         <a href="#">
                         <img class="imagenes-slider" width="225px"  src="img/Mass-Effect-Trilogy.jpg" alt=""></a>
                     </div>
-                    <div class="d-inline">
+                    <div class="d-inline-block">
                         <a href="#">
                         <img class="imagenes-slider" width="225px"  src="img/Mass-Effect-Trilogy.jpg" alt=""></a>
                     </div>            
@@ -140,56 +140,50 @@
                         </ul>
                     </div>
                 </div>
-                <!--<div class="card-table">
-                   <table>
-                       <tbody>
-                           <tr>
-                               <td><a href="#">Clan1</a></td>
-                               <td>1441</td>
-                            </tr>
-                           <tr>
-                               <td>
-                                   <a href="#">Clan2</a>
-                                </td>
-                                <td>1441</td>
-                            </tr>
-                           <tr>
-                               <td>
-                                   <a href="#">Clan3</a>
-                                </td>
-                                <td>1441</td>
-                            </tr>
-                           <tr>
-                               <td>
-                                   <a href="#">Clan4</a>
-                                </td>
-                                <td>1441</td></tr>
-                           <tr>
-                               <td>
-                                   <a href="#">Clan5</a>
-                                </td>
-                                <td>1441</td>
-                            </tr>
-                           <tr>
-                               <td>
-                                   <a href="#">Clan6</a>
-                                </td>
-                                <td>1441</td>
-                            </tr>
-                        </tbody>
-                   </table>
-                </div>
             </div>
-        </div>-->
+        </div>
         <!-- Video Trailer ################################################-->
-        <div class="video-trailer">
-            <div>
 
+        <div class="video-trailer">
+            <div class="video1">
+                <h4>New Trailer</h4>
+                <img src="img/marco2.png" alt="marco2">
+            </div>
+            <div class="video2">
+                <video src="img/New Marvel .mp4" controls>
+                </video>
             </div>
         </div>
         <!-- Footer ########################################################-->
-        <div class="footer">
-
+        <div class="footer row">
+            <div class="footer-text d-flex justify-content-between col-4">
+                <a href="#" class="align-self-center">
+                    <img src="img/face.png" alt="Facebook">
+                </a>
+                <h4 class="align-self-center h4-1">Facebook</h4>
+                <h4 class="align-self-center h4-2">Become a fan</h4>
+                <a href="#" class="align-self-center">
+                    <img src="img/arrow.png" alt="">
+                </a>
+            </div>
+            <div class="footer-text d-flex justify-content-between col-4">
+                <a href="#"class="align-self-center"><img src="img/twitter.png" alt=""></a>
+                <h4 class="align-self-center h4-1">Twitter</h4>
+                <h4 class="align-self-center h4-2">Follow us</h4>
+                <a href="#" class="align-self-center">
+                    <img src="img/arrow.png" alt="">
+                </a>
+            </div>
+            <div class="footer-text d-flex justify-content-between col-4">
+                <a href="#" class="align-self-center">
+                    <img src="img/Iron Ao.png" width="30px" heigh="30px" alt="Iron Ao">
+                </a>
+                <h4 class="align-self-center h4-1 ">Foros</h4>
+                <h4 class="align-self-center h4-2">Visit us</h4>
+                <a href="#" class="align-self-center">
+                    <img src="img/arrow.png" alt="">
+                </a>
+            </div>
         </div>
     </div>
     
