--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
         <div class="another-slider">
             <div class="slider-div">
                 <div class="slider-ul">
-                    <div class="move">
                     <div class="slider-move d-inline-block">
                         <a href="#">
                         <img class="imagenes-slider"  width="225px" src="img/Mass-Effect-Trilogy.jpg" alt=""></a>
@@ -96,7 +95,10 @@
                         <a href="#">
                         <img class="imagenes-slider" width="225px"  src="img/Mass-Effect-Trilogy.jpg" alt=""></a>
                     </div>
-                </div>            
+                    <div class="slider-move d-inline-block">
+                            <a href="#">
+                            <img class="imagenes-slider" width="225px"  src="img/Mass-Effect-Trilogy.jpg" alt=""></a>
+                        </div>           
                 </div>
             </div>
         </div>
