--- a/news.html
+++ b/news.html
@@ -42,41 +42,70 @@
                             <img src="img/marco1.png" alt="marco2"> 
                         </div>
                         <div class="news">
-                        <div class="">
+                        <div class="news-section">
+                                <img src="img/Mass-Effect-Trilogy.jpg" alt="">
+                                <a href="#"><h5>New notice</h5></a>
                             <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.
                                 ​
                             This is a great space to write long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide. Tell your visitors the story of how you came up with the idea for your business and what makes you different from your competitors.</p>
                             <a href="#">READ MORE</a>
                         </div>
-                        <div class="">
+                        <div class="news-divisor">
+                            <img src="img/accent-2.png" alt="">
+                        </div>
+                        <div class="news-section">
+                                <img src="img/Mass-Effect-Trilogy.jpg" alt="">
+                                <a href="#"><h5>New notice</h5></a>
                                 <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.
                                 ​
                             This is a great space to write long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide. Tell your visitors the story of how you came up with the idea for your business and what makes you different from your competitors.</p>
                             <a href="#">READ MORE</a>
                         </div>
-                        <div class="">
+                        <div class="news-divisor">
+                            <img src="img/accent-2.png" alt="">
+                        </div>
+                        <div class="news-section">
+                                <img src="img/Mass-Effect-Trilogy.jpg" alt="">
+                                <a href="#"><h5>New notice</h5></a>
                                 <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.
                                 ​
                             This is a great space to write long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide. Tell your visitors the story of how you came up with the idea for your business and what makes you different from your competitors.</p>
                             <a href="#">READ MORE</a>
                         </div>
-                        <div class="">
+                        <div class="news-divisor">
+                            <img src="img/accent-2.png" alt="">
+                        </div>
+                        <div class="news-section">
+                                <img src="img/Mass-Effect-Trilogy.jpg" alt="">
+                                <a href="#"><h5>New notice</h5></a>
                                 <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.
                                 ​
                             This is a great space to write long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide. Tell your visitors the story of how you came up with the idea for your business and what makes you different from your competitors.</p>
                             <a href="#">READ MORE</a>
                         </div>
-                        <div class="">
+                        <div class="news-divisor">
+                            <img src="img/accent-2.png" alt="">
+                        </div>
+                        <div class="news-section">
+                                <img src="img/Mass-Effect-Trilogy.jpg" alt="">
+                                <a href="#"><h5>New notice</h5></a>
                                 <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.
                                 ​
                             This is a great space to write long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide. Tell your visitors the story of how you came up with the idea for your business and what makes you different from your competitors.</p>
                             <a href="#">READ MORE</a>
                         </div>
-                        <div class="">
-                                <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.
+                        <div class="news-divisor">
+                            <img src="img/accent-2.png" alt="">
+                        </div>
+                        <div class="news-section"> 
+                            <img src="img/Mass-Effect-Trilogy.jpg" alt="">
+                            <a href="#"><h5>New notice</h5></a>
+                            <p>
+                                    I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.
+                           
                                 ​
                             This is a great space to write long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide. Tell your visitors the story of how you came up with the idea for your business and what makes you different from your competitors.</p>
-                            <a href="#">READ MORE</a>
+                            <a class="" href="#">READ MORE</a>
                         </div>
                     </div>
                     </div>
