--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <div class="col-6 row collapse navbar-collapse d-flex align-items-start" id="ironAo-menu">
                     <ul class="col-12 no-gutters row navbar-nav menu-list">
                         <li class="col-3 col-lg-3 nav-item menu-buttons"><a class="nav-link" href="index.html">Inicio</a></li>     
-                        <li class="col-3 col-lg-3 nav-item menu-buttons"><a class="nav-link" href="#">Novedades</a></li>
-                        <li class="col-3 col-lg-3 nav-item menu-buttons"><a class="nav-link" href="#">Reviews</a></li>
-                        <li class="col-3 nav-item col-lg-3 menu-buttons"><a class="nav-link" href="#">Acerca de</a></li>
+                        <li class="col-3 col-lg-3 nav-item menu-buttons"><a class="nav-link" href="news.html">Novedades</a></li>
+                        <li class="col-3 col-lg-3 nav-item menu-buttons"><a class="nav-link" href="http://iron-ao.foroactivo.com/f3-donaciones" target="_blank">Donaciones</a></li>
+                        <li class="col-3 nav-item col-lg-3 menu-buttons"><a class="nav-link" href="https://web.archive.org/web/20130621072803/http://www.juegosdrag.es/aomanual/?sec=clases2#ir" target="_blank">Manual</a></li>
                     </ul>           
                 </div>
             </nav>
