modal sin optimizar

--- a/index.html
+++ b/index.html
@@ -99,12 +99,10 @@
                         <span aria-hidden="true">&times;</span>
                       </button>
                     </div>
-                    <div class="modal-body">
-                        <h5>IronAo Servidor</h5>
+                    <div class="modal-body" id="modal-body1">
+                        <h5></h5>
                       <img src="img/principal.jpg" alt="IronAO">
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, officiis similique, debitis minima eos id necessitatibus hic unde corporis maxime dolorem voluptatum laboriosam consectetur, iste doloremque. Eos cumque eaque suscipit sapiente dolor maiores repudiandae iure quo illum quos, velit natus.
-                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus maiores omnis earum quasi, distinctio voluptate deleniti molestiae dolores nesciunt totam voluptas iste tempore animi? Hic corporis ullam tempora, esse nobis deleniti impedit rerum itaque incidunt. Pariatur dolorem consequatur neque tempore autem nemo, eius rem, sapiente maiores, atque laborum dicta veniam?
-                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi animi cumque itaque deserunt consectetur illum officia eveniet, excepturi repellat, ut et odio? Aperiam, sed! Adipisci, corrupti ducimus id dicta maxime, incidunt eveniet facere, quaerat quibusdam facilis harum asperiores optio reprehenderit sapiente. Velit accusantium illo cumque pariatur explicabo quae asperiores, corrupti, quibusdam culpa quo omnis voluptates nostrum officia necessitatibus quisquam! Totam, eius repellendus blanditiis beatae voluptatum expedita dolorum nostrum ducimus cupiditate at ut vitae corrupti cumque consectetur odio earum. Ducimus rerum nostrum praesentium, quos, sequi voluptatem harum deserunt, ipsam accusamus odit necessitatibus facere ut dolores et nobis perferendis dolor similique cupiditate?
+                      <p>
                       </p>
                     </div>
                   </div>
@@ -122,12 +120,10 @@
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
-                <div class="modal-body">
-                    <h5>Castillos IronAo</h5>
+                <div class="modal-body" id="modal-body2">
+                    <h5></h5>
                   <img src="img/castis1.jpg" alt="IronAO">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, officiis similique, debitis minima eos id necessitatibus hic unde corporis maxime dolorem voluptatum laboriosam consectetur, iste doloremque. Eos cumque eaque suscipit sapiente dolor maiores repudiandae iure quo illum quos, velit natus.
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus maiores omnis earum quasi, distinctio voluptate deleniti molestiae dolores nesciunt totam voluptas iste tempore animi? Hic corporis ullam tempora, esse nobis deleniti impedit rerum itaque incidunt. Pariatur dolorem consequatur neque tempore autem nemo, eius rem, sapiente maiores, atque laborum dicta veniam?
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi animi cumque itaque deserunt consectetur illum officia eveniet, excepturi repellat, ut et odio? Aperiam, sed! Adipisci, corrupti ducimus id dicta maxime, incidunt eveniet facere, quaerat quibusdam facilis harum asperiores optio reprehenderit sapiente. Velit accusantium illo cumque pariatur explicabo quae asperiores, corrupti, quibusdam culpa quo omnis voluptates nostrum officia necessitatibus quisquam! Totam, eius repellendus blanditiis beatae voluptatum expedita dolorum nostrum ducimus cupiditate at ut vitae corrupti cumque consectetur odio earum. Ducimus rerum nostrum praesentium, quos, sequi voluptatem harum deserunt, ipsam accusamus odit necessitatibus facere ut dolores et nobis perferendis dolor similique cupiditate?
+                  <p>
                   </p>
                 </div>
               </div>
@@ -145,12 +141,10 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body">
-                <h5>Dungeons IronAo</h5>
+            <div class="modal-body" id="modal-body3">
+                <h5></h5>
               <img src="img/castis2.jpg" alt="IronAO">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, officiis similique, debitis minima eos id necessitatibus hic unde corporis maxime dolorem voluptatum laboriosam consectetur, iste doloremque. Eos cumque eaque suscipit sapiente dolor maiores repudiandae iure quo illum quos, velit natus.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus maiores omnis earum quasi, distinctio voluptate deleniti molestiae dolores nesciunt totam voluptas iste tempore animi? Hic corporis ullam tempora, esse nobis deleniti impedit rerum itaque incidunt. Pariatur dolorem consequatur neque tempore autem nemo, eius rem, sapiente maiores, atque laborum dicta veniam?
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi animi cumque itaque deserunt consectetur illum officia eveniet, excepturi repellat, ut et odio? Aperiam, sed! Adipisci, corrupti ducimus id dicta maxime, incidunt eveniet facere, quaerat quibusdam facilis harum asperiores optio reprehenderit sapiente. Velit accusantium illo cumque pariatur explicabo quae asperiores, corrupti, quibusdam culpa quo omnis voluptates nostrum officia necessitatibus quisquam! Totam, eius repellendus blanditiis beatae voluptatum expedita dolorum nostrum ducimus cupiditate at ut vitae corrupti cumque consectetur odio earum. Ducimus rerum nostrum praesentium, quos, sequi voluptatem harum deserunt, ipsam accusamus odit necessitatibus facere ut dolores et nobis perferendis dolor similique cupiditate?
+              <p>
               </p>
             </div>
           </div>
@@ -168,12 +162,10 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-            <h5>Clases IronAo</h5>
+        <div class="modal-body" id="modal-body4">
+            <h5></h5>
           <img src="img/castis3.jpg" alt="IronAO">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, officiis similique, debitis minima eos id necessitatibus hic unde corporis maxime dolorem voluptatum laboriosam consectetur, iste doloremque. Eos cumque eaque suscipit sapiente dolor maiores repudiandae iure quo illum quos, velit natus.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus maiores omnis earum quasi, distinctio voluptate deleniti molestiae dolores nesciunt totam voluptas iste tempore animi? Hic corporis ullam tempora, esse nobis deleniti impedit rerum itaque incidunt. Pariatur dolorem consequatur neque tempore autem nemo, eius rem, sapiente maiores, atque laborum dicta veniam?
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi animi cumque itaque deserunt consectetur illum officia eveniet, excepturi repellat, ut et odio? Aperiam, sed! Adipisci, corrupti ducimus id dicta maxime, incidunt eveniet facere, quaerat quibusdam facilis harum asperiores optio reprehenderit sapiente. Velit accusantium illo cumque pariatur explicabo quae asperiores, corrupti, quibusdam culpa quo omnis voluptates nostrum officia necessitatibus quisquam! Totam, eius repellendus blanditiis beatae voluptatum expedita dolorum nostrum ducimus cupiditate at ut vitae corrupti cumque consectetur odio earum. Ducimus rerum nostrum praesentium, quos, sequi voluptatem harum deserunt, ipsam accusamus odit necessitatibus facere ut dolores et nobis perferendis dolor similique cupiditate?
+          <p>
           </p>
         </div>
       </div>
@@ -187,14 +179,14 @@
                 </div>
                 <div class="slider-container">
                 <ul id="slider" class="content-slider">
-                    <li><a href="#"><img src="img/Slider-Andromeda.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="img/Mass-Effect-Trilogy.jpg" alt=""></a></li>
+                    <label for="modal5"><li id="slider-li"><img src="img/Slider-Andromeda.jpg" alt=""></li></label>
+                    <label for="modal6"><li><img src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt=""></li></label>
+                    <label for="modal7"><li><img src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt=""></a></li></label>
+                    <label for="modal8"><li><img src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt=""></li></label>
+                    <label for="modal9"><li><img src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt=""></li></label>
+                    <label for="modal10"><li><img src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt=""></li></label>
+                    <label for="modal11"><li><img src="img/9189-mass-effect-wallpaper-effect3-games-imagepages-images.jpg" alt=""></li></label>
+                    <label for="modal12"><li><img src="img/Mass-Effect-Trilogy.jpg" alt=""></li></label>
                     
                 </ul><div class="button-left"><img src="img/asd.png" alt=""></div>
                     <div class="button-right"><img src="img/asd.png" alt=""></div>
@@ -327,6 +319,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/slider.js"></script>
+    <script src="src/app.js"></script>
 </body>
 </html>
