--- a/news.html
+++ b/news.html
@@ -54,6 +54,8 @@
                 </div>
             </nav>
         </div>
+
+        <!-- Cards #######################################################-->
         <div class="cards-div2 d-flex justify-content-between">
             <div class="cards-1 cards-3">
                 <div>
@@ -87,24 +89,7 @@
                                 tell a story and let your users know a little more about you. This is a great space to write
                                 long text about your company and your services. You can use this space to go into a little
                                 more detail about your company. Talk about your team and what services you provide. Tell
-                                your visitors the story of how you came up with the idea for your business and what makes
-                                you different from your competitorsI'm a paragraph. Click here to add your own text and edit
-                                me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own
-                                content and make changes to the font. Feel free to drag and drop me anywhere you like on
-                                your page. I’m a great place for you to tell a story and let your users know a little more
-                                about you.I'm a paragraph. Click here to add I'm a paragraph. Click here to add your own
-                                text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start
-                                adding your own content and make changes to the font. Feel free to drag and I'm a paragraph.
-                                Click here to add your own text and edit I'm a paragraph. Click here to add your own text
-                                and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding
-                                your own content and make changes to the font. Feel free to drag and drop me anywhere you
-                                like on your page. I’m a great place for you to tell a story and let your users know a little
-                                more about you.me. It’s easy. Just click “Edit Text” or double click me and you can start
-                                adding your own content and make changes to the font. Feel free to drag and drop me anywhere
-                                you like on your page. I’m a great place for you to tell a story and let your users know
-                                a little more about you.I'm a paragraph. Click here to add your own text and edit me. It’s
-                                easy. Just click “Edit Text” or double click me and you can start adding your own content
-                                and make changes to the font. Feel free to drag and drop me anywhere you like on your page.
+                                your visitors the story of how you came up with the idea for 
                                 I’m a great place for you to tell a story and </p>
                         </div>
                         <div class="news-divisor">
@@ -194,6 +179,7 @@
                                 competitors.</p>
                         </div>
                     </div>
+                    
                 </div>
             </div>
 
